# audio-fp

./: .gitignore  Cargo.toml
algo/: Cargo.toml
algo/src/: feature.rs  frequencer.rs  lib.rs
app/: Cargo.toml  index.html
app/src/: display.rs  main.rs  pipeline.rs
